--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Battle city</title>
 </head>
 <body>
-    
+   <h3>test krakena</h3>
+    <p>i learn how work git kraken</p>
 </body>
 </html>
